zirgen/dsl/test/repro/back_op_non_subcomponent.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s

component TestMap() {
  // TODO: better diagnostic
  // CHECK: error: Val has no layout
  for i : 0..3 { i @ 2 }
}

